--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Welcome to AdultTime </title>
+	<title>Welcome to Movies </title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="all" /> 
 </head>
 <body id="fulls">
@@ -16,7 +16,7 @@
  
  
 <div class="left-side"> 
-	 <a href="#">Unlimited Adult Movie & Seres </a>
+	 <a href="#">Unlimited Movie & Seres </a>
 	<button>START YOUR TRIAL</button>
 
 	</div>
